@@ -1,3 +1,8 @@
+2010-01-12  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* util/grub-mkpasswd-pbkdf2.c (main): Use grub_util_init_nls.
+	Reported by: Grégoire Sutre
+
 2010-01-11  Robert Millan  <rmh.grub@aybabtu.com>
 
 	* util/misc.c (canonicalize_file_name): New function.
